force-app/main/default/objects/EYI_Notification_Template__mdt/EYI_Notification_Template__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is used to store the notification configuration.</description>
    <label>EYI Notification Template</label>
    <pluralLabel>EYI Notification Templates</pluralLabel>
</CustomObject>