force-app/main/default/objects/EYI_Notification_Template__mdt/fields/Attachments__c.field-meta.xml
<CustomField>
    <fullName>Attachments__c</fullName>
    <description>Comma separated value</description>
    <inlineHelpText>Comma separated value</inlineHelpText>
    <label>Attachments</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>