force-app/main/default/objects/EYI_Notification_Template__mdt/fields/Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Type__c</fullName>
    <label>Channel Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>System Notification</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>