force-app/main/default/objects/EYI_Notification_Template__mdt/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <label>Email Template</label>
    <length>40</length>
    <type>Text</type>
</CustomField>