force-app/main/default/objects/EYI_Notification_Template__mdt/fields/Email_Template_Merge_Fields__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Merge_Fields__c</fullName>
    <description>This field is used to store the merge fields used in email template</description>
    <label>Email Template Merge Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>