force-app/main/default/objects/EYI_Notification_Template__mdt/fields/Notification_Trigger_Fields__c.field-meta.xml
<CustomField>
    <fullName>Notification_Trigger_Fields__c</fullName>
    <label>Notification Trigger Fields</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>