force-app/main/default/objects/EYI_Notification_Template__mdt/fields/Project_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Project_Vertical__c</fullName>
    <label>Project Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>PreSales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sourcing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>