force-app/main/default/objects/EYI_Notification_Template__mdt/fields/Recipient_Field__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Field__c</fullName>
    <label>Recipient Field</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>