force-app/main/default/objects/EYI_Notification_Template__mdt/fields/Sobject__c.field-meta.xml
<CustomField>
    <fullName>Sobject__c</fullName>
    <label>Sobject</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>