force-app/main/default/objects/EYI_Notification_Template__mdt/listViews/All_Notifications.listView-meta.xml
<ListView>
    <fullName>All_Notifications</fullName>
    <columns>MasterLabel</columns>
    <columns>Sobject__c</columns>
    <columns>Active__c</columns>
    <columns>Channel_Type__c</columns>
    <columns>Email_Template__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>Notification_Trigger_Fields__c</columns>
    <columns>Recipient_Field__c</columns>
    <columns>Notification_Trigger_Logic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Notifications</label>
</ListView>