force-app/main/default/objects/EYI_Notification_Template__mdt/listViews/EYI_All_Metadata.listView-meta.xml
<ListView>
    <fullName>EYI_All_Metadata</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Sobject__c</columns>
    <columns>Active__c</columns>
    <columns>Channel_Type__c</columns>
    <columns>Notification_Trigger_Fields__c</columns>
    <columns>Notification_Trigger_Logic__c</columns>
    <columns>Recipient_Field__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>Email_Template__c</columns>
    <columns>Notification_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>EYI_All_Metadata</label>
</ListView>