force-app/main/default/objects/EYI_Notification_Template__mdt/listViews/Lead_Enquiry.listView-meta.xml
<ListView>
    <fullName>Lead_Enquiry</fullName>
    <columns>MasterLabel</columns>
    <columns>Channel_Type__c</columns>
    <columns>Email_Template__c</columns>
    <columns>Notification_Trigger_Fields__c</columns>
    <columns>Recipient_Field__c</columns>
    <columns>Notification_Trigger_Logic__c</columns>
    <columns>Notification_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sobject__c</field>
        <operation>equals</operation>
        <value>EYI_Lead_Enquiry__c</value>
    </filters>
    <filters>
        <field>Channel_Type__c</field>
        <operation>equals</operation>
        <value>Email,System Notification</value>
    </filters>
    <label>Lead Enquiry</label>
    <language>en_US</language>
</ListView>